# websearch

./: .claude  .gitignore  Cargo.toml  Makefile  README-RUST.md  README.md  USAGE_GUIDE.md  justfile  test.sh  test_all.sh
.claude/: settings.json
examples/: basic_search.rs  exa_debug.rs  exa_search.rs  google_search.rs  google_setup_test.rs  google_test_with_cx.rs  multi_provider_demo.rs  multi_provider_search.rs  serpapi_test.rs  simple_usage_example.rs  smart_aggregate_search.rs  tavily_search.rs
src/: error.rs  index.ts  lib.rs  multi_provider.rs  types.rs
src/providers/: arxiv.rs  arxiv.ts  brave.rs  brave.ts  duckduckgo.rs  duckduckgo.ts  exa.rs  exa.ts  google.rs  google.ts  index.ts  mod.rs  searxng.rs  searxng.ts  serpapi.rs  serpapi.ts  tavily.rs  tavily.ts
src/types/: index.ts
src/utils/: debug.rs  debug.ts  http.rs  http.ts  index.ts  mod.rs
tests/: cli_tests.rs  integration_tests.rs  provider_comprehensive_tests.rs  tavily_integration_tests.rs
